--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,15 +1,16 @@
 [unstable]
-#build-std = ["core", "compiler_builtins", "alloc", "panic_abort"]
-#build-std-features = ["compiler-builtins-mem"]
+build-std = ["core", "compiler_builtins", "alloc", "panic_abort"]
+build-std-features = ["compiler-builtins-mem"]
 
 [build]
-#target = "x86_64-unknown-linux-gnu"
+target = "x86_64-unknown-linux-gnu"
 #target = "aarch64-apple-darwin"
 #target = "x86_64-unknown-uefi"
 #rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
+rustflags = ["-C", "link-args=-nostartfiles"]
 
 [profile.dev]
-#panic = "abort"
+panic = "abort"
 
 [profile.release]
-#panic = "abort"
+panic = "abort"
